# swd-analyzer

./: CMakeLists.txt  README.md
cmake/: ExternalAnalyzerSDK.cmake
src/: PluginVersion.cmake  SWDAnalyzer.cpp  SWDAnalyzer.h  SWDAnalyzerResults.cpp  SWDAnalyzerResults.h  SWDAnalyzerSettings.cpp  SWDAnalyzerSettings.h  SWDSimulationDataGenerator.cpp  SWDSimulationDataGenerator.h  SWDTypes.cpp  SWDTypes.h  SWDUtils.cpp  SWDUtils.h  VersionInfo.cpp  VersionInfo.h
